# embed-captcha

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cfg
src/: __init__.py  captcha.html  captcha.py
src/embed_captcha/: captcha.html  captcha.py
