[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "embed_captcha_JURAKIN"
version = "0.0.1"
authors = [{ name = "Jurakin", email = "jurakin.dev@gmail.com" }]
description = "A small library that displays a captcha challenge and returns a captcha response token."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["PyQt5", "PyQtWebEngine"]

[project.urls]
Homepage = "https://github.com/jurakin/embed-captcha"
Issues = "https://github.com/jurakin/embed-captcha/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]
